[package]
name = "more-fps"
version = "0.1.5"
description = "more-fps: Using an AI model that can generate intermediate frames, we can make our videos smoother."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.0"
num_cpus = "1.15.0"
regex = "1.8.1"
rust_decimal = "1.29.1"
shell-words = "1.1.0"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.40"
